--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
-.App {
-}
 .App > img {
 	width: 100px;
 	display: block;
 	margin-top: 40px;
 	margin-left: 50px;
+	margin-bottom: 10px;
 }
 .App > div {
 	display: flex;
@@ -14,13 +13,30 @@
 	height: 500px;
 	margin-left: 50px;
 	padding-left: 0px;
+	border-right: 3px solid #60e8a6;
+}
+.App > div > .Navigation > p {
+	margin-top: 10px;
+	margin-bottom: 30px;
+	color: #a9c7b8;
+	text-transform: uppercase;
+	font-size: 8pt;
+	letter-spacing: .25pt;
 }
 .App >  div > .Navigation > li > span {
 	display: block;
 	width: 200px;
-	margin-top: 20px;
+	height: 40px;
+	margin-top: 10px;
+	font-weight: bold;
+	letter-spacing: .5px;
+	color: #60e8a6;
+	cursor:pointer;
+}
+.App >  div > .Navigation > li > span:hover {
+	color: #1dc975;
 }
 .App > div > .Pages {
-	margin-left: 80px;
+	margin-left: 60px;
 	margin-right: 50px;
 }
