--- a/src/MySongContainer/index.css
+++ b/src/MySongContainer/index.css
@@ -1,16 +1,23 @@
+.MySongContainer {
+	/*border: 1px solid blue;*/
+	width: 1000px;
+	margin-left: 100px;
+	margin-right: 100px;
+}
+
 .MySongContainer > h2 {
-	color: #b5f4d6;
+	font-family: 'Roboto', sans-serif;
+	font-size: 40pt;
+	font-weight: 900;
 	letter-spacing: 1px;
-	margin-top: 40px;
+	margin-bottom: 50px;
 }
+
 .MySongContainer > span {
-	background-color: #60e8a6;
-	color: #2c312f;
-	font-weight: bold;
-	padding: 10px;
+	font-family: 'Roboto', sans-serif;
+	font-size: 12pt;
+	font-weight: 700;
+	letter-spacing: .5px;
 	margin-right: 10px;
-	cursor:pointer;
-}
-.MySongContainer > span:hover {
-	background-color: #1dc975;	
+	cursor: pointer;
 }
